# aruco-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  add_license.ps1  package-lock.json  package.json
.agent/: instructions.md  roadmap.md
.agent/rules/: logic-parity.md
.github/workflows/: rust.yml
benches/: cv_benchmarks.rs
examples/wasm/: generate_marker.js  index.html  main.js  package-lock.json  package.json  vite.config.js
src/: lib.rs  wasm_bridge.rs
src/core/: detector.rs  dictionary.rs  mod.rs  posit.rs  svd.rs
src/cv/: contours.rs  geometry.rs  mod.rs  scalar.rs
src/pose/: mod.rs
src/simd/: mod.rs  native.rs  wasm.rs
tests/data/: sample_8x8.rs
